[package]
name = "pmv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bpaf = { version = "0.9.8", features = ["autocomplete", "docgen", "bright-color", "derive"] }
crossbeam-channel = "0.5.9"
ignore = { version = "0.4.21", features = ["simd-accel"] }
tree_magic_mini = { version = "3.0.3", features = ["tree_magic_db", "with-gpl-data"] }
xshell = "0.2.5"
